@@ -912,3 +912,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20121208 configure.ac,libspectrum.h.in: preliminary support for 64-bits binaries
          for Windows (patch #3591613) (Sergio).
 20121208 README: document support for reading PZX files (Sergio).
+20121222 szx.c: split SNET block into SNET, SNEF and SNER so that flash could
+         theoretically be saved separately (patch #3596469) (Fred).
